# cat-lang

./: .gitignore  CMakeLists.txt  HelloJIT.cpp  LICENSE  README.md  example.ll  main.cpp  out.ll  run.sh  test.cat  testjit.cat
compiler/: CMakeLists.txt  main.cpp
compiler/include/: Cat.hpp  CodeGen.hpp  CodeGenCtx.hpp  ControlFlowPass.hpp  Diagnostics.hpp  Environment.hpp  Jit.hpp  Location.hpp  Optimizer.hpp  Parser.hpp  PassDriver.hpp  Scanner.hpp  Scope.hpp  SemaType.hpp  SemanticCtx.hpp  SemanticPass.hpp  Symbol.hpp  SymbolTable.hpp  Token.hpp  Types.hpp  catlib.hpp
compiler/include/ast/: AST.hpp  ASTVisitor.hpp  Operator.hpp
compiler/src/analyzer/: CMakeLists.txt
compiler/src/analyzer/common/: foo.c
compiler/src/analyzer/constproppass/: CMakeLists.txt  constproppass.cpp  constproppass.h
compiler/src/analyzer/counterpass/: CMakeLists.txt  counterpass.cpp  counterpass.h
compiler/src/analyzer/dcallpass/: CMakeLists.txt  dcallpass.cpp  dcallpass.h
compiler/src/analyzer/dcepass/: CMakeLists.txt  dcepass.cpp  dcepass.h
compiler/src/analyzer/dupbbpass/: CMakeLists.txt  dupbbpass.cpp  dupbbpass.h
compiler/src/analyzer/injectfuncpass/: CMakeLists.txt  injectfuncpass.cpp  injectfuncpass.h
compiler/src/analyzer/mbapass/: CMakeLists.txt  mbapass.cpp  mbapass.h
compiler/src/analyzer/mergebbpass/: CMakeLists.txt
compiler/src/analyzer/renamepass/: CMakeLists.txt  MyPass.cpp
compiler/src/analyzer/rivpass/: CMakeLists.txt  rivpass.cpp  rivpass.h
compiler/src/analyzer/scallpass/: CMakeLists.txt  scallpass.cpp  scallpass.h
compiler/src/common/: Cat.cpp  Diagnostics.cpp
compiler/src/front-end/ast/: AST.cpp  ASTPrinter.cpp
compiler/src/front-end/parser/: Parser.cpp
compiler/src/front-end/scanner/: Scanner.cpp
compiler/src/front-end/sematic/: ControlFlowPass.cpp  PassDriver.cpp  SemaType.cpp  SemanticCtx.cpp  SemanticPass.cpp
compiler/src/front-end/symbol/: Scope.cpp  Symbol.cpp  SymbolTable.cpp
compiler/src/gc/: gc.cpp
compiler/src/mid-end/codegen/: CodeGen.cpp  CodeGenCtx.cpp
compiler/src/mid-end/optimizer/: Optimizer.cpp
compiler/src/runtime/: catlib.cpp
dcc888Optimizer/: CMakeLists.txt  main.cpp
dcc888Optimizer/include/: Assemble.h  DataFlow.h  utils.h
dcc888Optimizer/src/: Assemble.cpp  DataFlow.cpp
include/: ByteCompiler.hpp  Cat.hpp  CodeGen.hpp  CodeGenCtx.hpp  ControlFlowPass.hpp  Diagnostics.hpp  Environment.hpp  Expr.hpp  IRGen.hpp  JIT.hpp  Jit.hpp  Location.hpp  Logger.hpp  Object.hpp  OpCode.hpp  Optimizer.hpp  Parser.hpp  PassDriver.hpp  Resolver.hpp  Scanner.hpp  Scope.hpp  SemaType.hpp  SemanticCtx.hpp  SemanticPass.hpp  Stmt.hpp  Symbol.hpp  SymbolTable.hpp  Token.hpp  Types.hpp  VM.hpp  Value.hpp  catlib.hpp
include/ast/: AST.hpp  ASTPrinter.hpp  ASTVisitor.hpp  Operator.hpp  Stmt.hpp
mlir/: CMakeLists.txt  main.cpp
mlir/include/Dialect/: CMakeLists.txt
mlir/include/Dialect/Cat/IR/: CMakeLists.txt  CatAttrs.h  CatAttrs.td  CatDialect.h  CatDialect.td  CatEnums.h  CatEnums.td  CatTypes.h  CatTypes.td
mlir/src/Dialect/Cat/IR/: CMakeLists.txt  CatDialect.cpp  CatTypes.cpp
src/: Cat.cpp  Environment.cpp  IRGen.cpp  JIT.cpp  Logger.cpp  Parser.cpp  Scanner.cpp
src/analyzer/counterpass/: CMakeLists.txt  foo.ll
src/analyzer/renamepass/: CMakeLists.txt  MyPass.h  foo.ll
src/back-end/: Jit.cpp
src/back-end/test/: test.asm
src/common/: Cat.cpp  Diagnostics.hpp  Logger.cpp
src/front-end/: Parser.cpp  Resolver.cpp  Scanner.cpp
src/front-end/ast/: AST.cpp  ASTPrinter.cpp
src/front-end/parser/: Parser.cpp
src/front-end/scanner/: Scanner.cpp
src/front-end/sematic/: ControlFlowPass.cpp  PassDriver.cpp  Resolver.cpp  SemaType.cpp  SemanticCtx.cpp  SemanticPass.cpp
src/front-end/symbol/: Scope.cpp  Symbol.cpp  SymbolTable.cpp
src/gc/: gc.cpp
src/mid-end/: IRGen.cpp  JIT.cpp
src/mid-end/codegen/: CodeGen.cpp  CodeGenCtx.cpp  IRGen.cpp  JIT.cpp
src/runtime/: catlib.cpp
src/vm/: ByteCompiler.cpp  VM.cpp
test/: HelloJIT.cpp  counter.ll  foo.cpp  foo_opt.ll  inject.ll  mba.ll  test.cat  testjit.cat
